<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">KandangTopia</string>
    <string name="dummy_name_kandang">Kandang Bangkit</string>
    <string name="dummy_name_kota">Kota Jakarta Utara</string>
    <string name="dummy_amount">X</string>
    <string name="hari">Hari</string>
    <string name="ekor">Ekor</string>
    <string name="gram">Gram</string>
    <string name="option_aktif">Aktif</string>
    <string name="option_rehat">Rehat</string>
    <string name="searchbar_helper">Cari</string>
    <string name="amount_list_aktif">Kamu memiliki <b>%d kandang aktif</b></string>
    <string name="amount_list_rehat">Kamu memiliki <b>%d kandang rehat</b></string>
    <string name="dummy_amount_list">Kamu memiliki <b>X kandang aktif</b></string>
    <string name="dummy_nama_kandang">Kandang X</string>
    <string name="dummy_nama_kota">Kota X</string>
    <string name="dummy_periodenumur">Periode X | Umur X</string>
    <string name="title_type_kandang">Jenis Kandang</string>
    <string name="dummy_type_kandang">Type X</string>
    <string name="title_tanggal_doc">Tanggal DOC in</string>
    <string name="dummy_tanggal_doc">20 Des 2021</string>
    <string name="performa_title">Performa</string>
    <string name="ip_title">IP</string>
    <string name="fcr_title">FCR</string>
    <string name="ip_value">709</string>
    <string name="fcr_value">1.235</string>
    <string name="adg_title">ADG</string>
    <string name="deplesi_title">Deplesi</string>
    <string name="adg_value">65</string>
    <string name="unit_gr_hari">gr/hari</string>
    <string name="deplesi_value">1 %</string>
    <string name="bkandang_title">Bobot Kandang</string>
    <string name="brerata_title">Bobot Rerata</string>
    <string name="bkandang_value">1,523</string>
    <string name="unit_gr">gr</string>
    <string name="brerata_value">1,523</string>
    <string name="kandang_title">Kandang</string>
    <string name="sdh_title">Standarisasi Data Harian</string>
    <string name="sdh_value">COBB</string>
    <string name="tm_title">Tanggal Mulai</string>
    <string name="tci_title">Tanggal Chick in</string>
    <string name="tm_value">19 Des 2021</string>
    <string name="tci_value">20 Des 2021</string>
    <string name="ayam_title">Ayam</string>
    <string name="ndoc_title">Nama DOC</string>
    <string name="ndoc_value">BR BIG TOP</string>
    <string name="docm_title">DOC Masuk</string>
    <string name="badoc_title">Bobot Awal DOC</string>
    <string name="docm_value">5.000</string>
    <string name="unit_ekor">ekor</string>
    <string name="badoc_value">2.490</string>
    <string name="at_title">Ayam Terjual</string>
    <string name="at_value">2.500</string>
    <string name="deplesi2_value">10</string>
    <string name="pakan_title">Pakan</string>
    <string name="pm_title">Pakan Masuk</string>
    <string name="pm_value">2.500</string>
    <string name="unit_kg">kg</string>
    <string name="pk_title">Pakan Keluar</string>
    <string name="pk_value">50</string>
    <string name="pp_title">Pakan Pakai</string>
    <string name="pp_value">1.000</string>
    <string name="sp_title">Sisa Pakan</string>
    <string name="sp_value">1.450</string>
    <string name="kppe_title">Konsumsi Pakan per Ekor</string>
    <string name="kppe_value">5</string>
    <string name="ep_title">Efisiensi Pakan</string>
    <string name="ep_value">85 %</string>
</resources>